Adds header styles

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <!-- Normalize CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Interactive agency</title>
   </head>
   <body>
     <header class="header">
       <nav class="nav">
-        <p class="nav__company">Interactive agency</p>
+        <img
+          class="nav__logo"
+          src="./assets/logo.png"
+          alt="Interactive agency"
+        />
         <ul class="nav__menu">
           <li class="nav__menu-item">Home</li>
           <li class="nav__menu-item">About us</li>
