--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
     <title>Interactive agency</title>
   </head>
   <body>
+    <div class="loader-wrapper">
+      <div class="loader">
+        <div class="loader-inner"></div>
+      </div>
+    </div>
     <header class="header" id="home">
       <nav class="nav">
         <img
