Add about section - need to style for other resolutions

--- a/src/index.html
+++ b/src/index.html
@@ -73,13 +73,57 @@
       </div>
     </header>
 
-    <section class="section" id="about">
-      <h2 class="section__header">What we do?</h2>
-      <ul class="about__item-list">
-        <li class="about__item">1</li>
-        <li class="about__item">2</li>
-        <li class="about__item">3</li>
-        <li class="about__item">4</li>
+    <section class="section">
+      <h2 class="section__heading">What we do?</h2>
+      <ul class="whatwedo__item-list">
+        <li class="whatwedo__item">
+          <img
+            src="assets/whatwedo/whatwedo1.png"
+            alt="pen and notes"
+            class="whatwedo__item-img"
+          />
+          <h3 class="whatwedo__item-title">Web design</h3>
+          <p class="whatwedo__item-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+            vero recusandae, dolor nostrum sapiente eveniet.
+          </p>
+        </li>
+        <li class="whatwedo__item">
+          <img
+            src="assets/whatwedo/whatwedo2.png"
+            alt="computer"
+            class="whatwedo__item-img"
+          />
+          <h3 class="whatwedo__item-title">Web Applications</h3>
+          <p class="whatwedo__item-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+            vero recusandae, dolor nostrum sapiente eveniet.
+          </p>
+        </li>
+        <li class="whatwedo__item">
+          <img
+            src="assets/whatwedo/whatwedo3.png"
+            alt="painting"
+            class="whatwedo__item-img"
+          />
+          <h3 class="whatwedo__item-title">Digital painting</h3>
+          <p class="whatwedo__item-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+            vero recusandae, dolor nostrum sapiente eveniet.
+          </p>
+        </li>
+        <li class="whatwedo__item">
+          <img
+            src="assets/whatwedo/whatwedo4.png"
+            alt="computer and mobile device"
+            class="whatwedo__item-img"
+          />
+          <h3 class="whatwedo__item-title">Desktop Applications</h3>
+          <p class="whatwedo__item-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+            vero recusandae, dolor nostrum sapiente eveniet.
+          </p>
+        </li>
       </ul>
     </section>
 
