--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,6 @@
       <img class="scrolltop__arrow" src="assets/arrowup.svg" alt="scroll top" />
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
