Adds more styles and animations

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,45 @@
       </div>
     </header>
 
+    <section class="section section--best">
+      <article class="best__article">
+        <h2 class="best__article-heading" data-aos="fade-up">
+          Best<span>Design</span>
+        </h2>
+        <p class="best__article-text" data-aos="fade-up">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+          perspiciatis inventore. Explicabo alias, cum a magni excepturi sed rem
+          dolores hic harum repudiandae voluptatibus accusantium!
+        </p>
+        <button
+          class="best__article-cta cta"
+          href="#contact"
+          data-scroll
+          data-aos="fade-in"
+        >
+          Ask for price
+        </button>
+      </article>
+      <article class="best__article">
+        <h2 class="best__article-heading" data-aos="fade-up">
+          Best<span>Code</span>
+        </h2>
+        <p class="best__article-text" data-aos="fade-up">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+          perspiciatis inventore. Explicabo alias, cum a magni excepturi sed rem
+          dolores hic harum repudiandae voluptatibus accusantium!
+        </p>
+        <button
+          class="best__article-cta cta"
+          href="contact"
+          data-scroll
+          data-aos="fade-in"
+        >
+          Ask for price
+        </button>
+      </article>
+    </section>
+
     <section class="section">
       <h2 class="section__heading">What we do?</h2>
       <ul class="whatwedo__item-list">
@@ -81,6 +120,7 @@
             src="assets/whatwedo/whatwedo1.png"
             alt="pen and notes"
             class="whatwedo__item-img"
+            data-aos="zoom-in"
           />
           <h3 class="whatwedo__item-title">Web design</h3>
           <p class="whatwedo__item-text">
@@ -93,6 +133,7 @@
             src="assets/whatwedo/whatwedo2.png"
             alt="computer"
             class="whatwedo__item-img"
+            data-aos="zoom-in"
           />
           <h3 class="whatwedo__item-title">Web Applications</h3>
           <p class="whatwedo__item-text">
@@ -105,6 +146,7 @@
             src="assets/whatwedo/whatwedo3.png"
             alt="painting"
             class="whatwedo__item-img"
+            data-aos="zoom-in"
           />
           <h3 class="whatwedo__item-title">Digital painting</h3>
           <p class="whatwedo__item-text">
@@ -117,6 +159,7 @@
             src="assets/whatwedo/whatwedo4.png"
             alt="computer and mobile device"
             class="whatwedo__item-img"
+            data-aos="zoom-in"
           />
           <h3 class="whatwedo__item-title">Desktop Applications</h3>
           <p class="whatwedo__item-text">
