whatwedo and best sections finished

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <section class="section section--best">
       <article class="best__article">
         <h2 class="best__article-heading" data-aos="fade-up">
-          Best<span>Design</span>
+          <span>Best</span><span>Design</span>
         </h2>
         <p class="best__article-text" data-aos="fade-up">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
@@ -94,7 +94,7 @@
       </article>
       <article class="best__article">
         <h2 class="best__article-heading" data-aos="fade-up">
-          Best<span>Code</span>
+          <span>Best</span><span>Code</span>
         </h2>
         <p class="best__article-text" data-aos="fade-up">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
