--- a/src/index.html
+++ b/src/index.html
@@ -14,194 +14,240 @@
         <div class="loader-inner"></div>
       </div>
     </div>
-    <header class="header" id="home">
-      <nav class="nav">
-        <img
-          class="nav__logo"
-          src="./assets/logo.png"
-          alt="Interactive agency"
-        />
-        <button class="nav__burger">
-          <div class="nav__burger-bar"></div>
-          <div class="nav__burger-bar"></div>
-          <div class="nav__burger-bar"></div>
+
+    <div class="content content--hide">
+      <header class="header" id="home">
+        <nav class="nav">
+          <img
+            class="nav__logo"
+            src="./assets/logo.png"
+            alt="Interactive agency"
+          />
+          <button class="nav__burger">
+            <div class="nav__burger-bar"></div>
+            <div class="nav__burger-bar"></div>
+            <div class="nav__burger-bar"></div>
+          </button>
+          <ul class="nav__menu">
+            <li class="nav__menu-item">
+              <a class="nav__menu-link" href="#home" data-scroll>Home</a>
+            </li>
+            <li class="nav__menu-item">
+              <a class="nav__menu-link" href="#about" data-scroll>About us</a>
+            </li>
+            <li class="nav__menu-item">
+              <a class="nav__menu-link" href="#offer" data-scroll>Offer</a>
+            </li>
+            <li class="nav__menu-item">
+              <a class="nav__menu-link" href="#portfolio" data-scroll
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav__menu-item">
+              <button class="nav__cta" href="#contact" data-scroll>
+                Contact
+              </button>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__heading">Lorem ipsum dolor sit amet</h1>
+        <p class="header__paragraph">
+          Nunc vel nibh tempor, pharetra lectus congue, luctus orci.
+        </p>
+        <button class="header__cta cta" href="#contact" data-scroll>
+          Ask for price
         </button>
-        <ul class="nav__menu">
-          <li class="nav__menu-item">
-            <a class="nav__menu-link" href="#home" data-scroll>Home</a>
+        <div class="header__scrolldown-container">
+          <img
+            class="header__scrolldown-mouse"
+            src="assets/mouse.png"
+            alt="Computer mouse"
+          />
+          <p class="header__scrolldown-text">scroll down</p>
+        </div>
+      </header>
+
+      <section class="section section--best" id="offer">
+        <article class="best__article">
+          <h2 class="best__article-heading" data-aos="fade-up">
+            <span>Best</span><span>Design</span>
+          </h2>
+          <p class="best__article-text" data-aos="fade-up">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+            perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
+            rem dolores hic harum repudiandae voluptatibus accusantium!
+          </p>
+          <button
+            class="best__article-cta cta"
+            href="#contact"
+            data-scroll
+            data-aos="fade-in"
+          >
+            Ask for price
+          </button>
+        </article>
+        <article class="best__article">
+          <h2 class="best__article-heading" data-aos="fade-up">
+            <span>Best</span><span>Code</span>
+          </h2>
+          <p class="best__article-text" data-aos="fade-up">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+            perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
+            rem dolores hic harum repudiandae voluptatibus accusantium!
+          </p>
+          <button
+            class="best__article-cta cta"
+            href="#contact"
+            data-scroll
+            data-aos="fade-in"
+          >
+            Ask for price
+          </button>
+        </article>
+      </section>
+
+      <section class="section">
+        <h2 class="section__heading">What we do?</h2>
+        <ul class="whatwedo__item-list">
+          <li class="whatwedo__item">
+            <img
+              src="assets/whatwedo/whatwedo1.png"
+              alt="pen and notes"
+              class="whatwedo__item-img"
+              data-aos="zoom-in"
+            />
+            <h3 class="whatwedo__item-title">Web design</h3>
+            <p class="whatwedo__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+              vero recusandae, dolor nostrum sapiente eveniet.
+            </p>
           </li>
-          <li class="nav__menu-item">
-            <a class="nav__menu-link" href="#about" data-scroll>About us</a>
+          <li class="whatwedo__item">
+            <img
+              src="assets/whatwedo/whatwedo2.png"
+              alt="computer"
+              class="whatwedo__item-img"
+              data-aos="zoom-in"
+            />
+            <h3 class="whatwedo__item-title">Web Applications</h3>
+            <p class="whatwedo__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+              vero recusandae, dolor nostrum sapiente eveniet.
+            </p>
           </li>
-          <li class="nav__menu-item">
-            <a class="nav__menu-link" href="#offer" data-scroll>Offer</a>
+          <li class="whatwedo__item">
+            <img
+              src="assets/whatwedo/whatwedo3.png"
+              alt="painting"
+              class="whatwedo__item-img"
+              data-aos="zoom-in"
+            />
+            <h3 class="whatwedo__item-title">Digital painting</h3>
+            <p class="whatwedo__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+              vero recusandae, dolor nostrum sapiente eveniet.
+            </p>
           </li>
-          <li class="nav__menu-item">
-            <a class="nav__menu-link" href="#portfolio" data-scroll
-              >Portfolio</a
-            >
-          </li>
-          <li class="nav__menu-item">
-            <button class="nav__cta" href="#contact" data-scroll>
-              Contact
-            </button>
+          <li class="whatwedo__item">
+            <img
+              src="assets/whatwedo/whatwedo4.png"
+              alt="computer and mobile device"
+              class="whatwedo__item-img"
+              data-aos="zoom-in"
+            />
+            <h3 class="whatwedo__item-title">Desktop Applications</h3>
+            <p class="whatwedo__item-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
+              vero recusandae, dolor nostrum sapiente eveniet.
+            </p>
           </li>
         </ul>
-      </nav>
-      <h1 class="header__heading">Lorem ipsum dolor sit amet</h1>
-      <p class="header__paragraph">
-        Nunc vel nibh tempor, pharetra lectus congue, luctus orci.
-      </p>
-      <button class="header__cta cta" href="#contact" data-scroll>
-        Ask for price
-      </button>
-      <div class="header__scrolldown-container">
-        <img
-          class="header__scrolldown-mouse"
-          src="assets/mouse.png"
-          alt="Computer mouse"
-        />
-        <p class="header__scrolldown-text">scroll down</p>
-      </div>
-    </header>
+      </section>
 
-    <section class="section section--best" id="offer">
-      <article class="best__article">
-        <h2 class="best__article-heading" data-aos="fade-up">
-          <span>Best</span><span>Design</span>
-        </h2>
-        <p class="best__article-text" data-aos="fade-up">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-          perspiciatis inventore. Explicabo alias, cum a magni excepturi sed rem
-          dolores hic harum repudiandae voluptatibus accusantium!
-        </p>
-        <button
-          class="best__article-cta cta"
-          href="#contact"
-          data-scroll
-          data-aos="fade-in"
-        >
-          Ask for price
-        </button>
-      </article>
-      <article class="best__article">
-        <h2 class="best__article-heading" data-aos="fade-up">
-          <span>Best</span><span>Code</span>
-        </h2>
-        <p class="best__article-text" data-aos="fade-up">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-          perspiciatis inventore. Explicabo alias, cum a magni excepturi sed rem
-          dolores hic harum repudiandae voluptatibus accusantium!
-        </p>
-        <button
-          class="best__article-cta cta"
-          href="#contact"
-          data-scroll
-          data-aos="fade-in"
-        >
-          Ask for price
-        </button>
-      </article>
-    </section>
+      <div class="glide" id="portfolio">
+        <div class="glide__track" data-glide-el="track">
+          <ul class="glide__slides">
+            <li class="glide__slide">
+              <div class="glide__overlay">
+                <div class="glide__overlay-inner">
+                  <h3 class="glide__overlay-header">Neptune template</h3>
+                  <p class="glide__overlay-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
+                    iste natus minus quidem nihil.
+                  </p>
+                  <button class="cta" href="#home" data-scroll>
+                    Watch more
+                  </button>
+                </div>
+              </div>
+              <img
+                src="assets/glide/glide1.png"
+                alt="website"
+                class="glide__slide-image"
+              />
+            </li>
+            <li class="glide__slide">
+              <div class="glide__overlay">
+                <div class="glide__overlay-inner">
+                  <h3 class="glide__overlay-header">Lorem template</h3>
+                  <p class="glide__overlay-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
+                    iste natus minus quidem nihil.
+                  </p>
+                  <button class="cta" href="#home" data-scroll>
+                    Watch more
+                  </button>
+                </div>
+              </div>
+              <img
+                src="assets/glide/glide2.png"
+                alt="website"
+                class="glide__slide-image"
+              />
+            </li>
+            <li class="glide__slide">
+              <div class="glide__overlay">
+                <div class="glide__overlay-inner">
+                  <h3 class="glide__overlay-header">Ipsum template</h3>
+                  <p class="glide__overlay-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
+                    iste natus minus quidem nihil.
+                  </p>
+                  <button class="cta" href="#home" data-scroll>
+                    Watch more
+                  </button>
+                </div>
+              </div>
+              <img
+                src="assets/glide/glide3.png"
+                alt="website"
+                class="glide__slide-image"
+              />
+            </li>
+          </ul>
+        </div>
 
-    <section class="section">
-      <h2 class="section__heading">What we do?</h2>
-      <ul class="whatwedo__item-list">
-        <li class="whatwedo__item">
-          <img
-            src="assets/whatwedo/whatwedo1.png"
-            alt="pen and notes"
-            class="whatwedo__item-img"
-            data-aos="zoom-in"
-          />
-          <h3 class="whatwedo__item-title">Web design</h3>
-          <p class="whatwedo__item-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-            vero recusandae, dolor nostrum sapiente eveniet.
-          </p>
-        </li>
-        <li class="whatwedo__item">
-          <img
-            src="assets/whatwedo/whatwedo2.png"
-            alt="computer"
-            class="whatwedo__item-img"
-            data-aos="zoom-in"
-          />
-          <h3 class="whatwedo__item-title">Web Applications</h3>
-          <p class="whatwedo__item-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-            vero recusandae, dolor nostrum sapiente eveniet.
-          </p>
-        </li>
-        <li class="whatwedo__item">
-          <img
-            src="assets/whatwedo/whatwedo3.png"
-            alt="painting"
-            class="whatwedo__item-img"
-            data-aos="zoom-in"
-          />
-          <h3 class="whatwedo__item-title">Digital painting</h3>
-          <p class="whatwedo__item-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-            vero recusandae, dolor nostrum sapiente eveniet.
-          </p>
-        </li>
-        <li class="whatwedo__item">
-          <img
-            src="assets/whatwedo/whatwedo4.png"
-            alt="computer and mobile device"
-            class="whatwedo__item-img"
-            data-aos="zoom-in"
-          />
-          <h3 class="whatwedo__item-title">Desktop Applications</h3>
-          <p class="whatwedo__item-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-            vero recusandae, dolor nostrum sapiente eveniet.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <div class="glide" id="portfolio">
-      <div class="glide__overlay">
-        <div class="glide__overlay-inner">
-          <h3 class="glide__overlay-header">Neptune template</h3>
-          <p class="glide__overlay-text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima,
-            corrupti? Nam quas fugit ipsam ea excepturi laborum iste natus minus
-            quidem nihil.
-          </p>
-          <button class="cta" href="#home" data-scroll>Watch more</button>
+        <div class="glide__arrows" data-glide-el="controls">
+          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+            &lt;
+          </button>
+          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+            &gt;
+          </button>
         </div>
       </div>
-      <div class="glide__track" data-glide-el="track">
-        <ul class="glide__slides">
-          <li class="glide__slide">
-            <img src="assets/glide/glide1.png" alt="website" />
-          </li>
-          <li class="glide__slide">
-            <img src="assets/glide/glide2.png" alt="website" />
-          </li>
-          <li class="glide__slide">
-            <img src="assets/glide/glide3.png" alt="website" />
-          </li>
-        </ul>
-      </div>
 
-      <div class="glide__arrows" data-glide-el="controls">
-        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-          &lt;
-        </button>
-        <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-          &gt;
-        </button>
+      <div class="scrolltop" href="#home" data-scroll>
+        <img
+          class="scrolltop__arrow"
+          src="assets/arrowup.svg"
+          alt="scroll top"
+        />
       </div>
     </div>
-
-    <div class="scrolltop" href="#home" data-scroll>
-      <img class="scrolltop__arrow" src="assets/arrowup.svg" alt="scroll top" />
-    </div>
-
     <script src="app.js"></script>
   </body>
 </html>
