Change overall styles

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,7 @@
             </p>
           </li>
         </ul>
+        <button class="cta">Ask for price</button>
       </section>
 
       <div class="glide" id="portfolio">
