--- a/src/index.html
+++ b/src/index.html
@@ -67,188 +67,248 @@
         </div>
       </header>
 
-      <section class="section section--best" id="offer">
-        <article class="best__article">
-          <h2 class="best__article-heading" data-aos="fade-up">
-            <span>Best</span><span>Design</span>
-          </h2>
-          <p class="best__article-text" data-aos="fade-up">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-            perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
-            rem dolores hic harum repudiandae voluptatibus accusantium!
-          </p>
-          <button
-            class="best__article-cta cta"
-            href="#contact"
-            data-scroll
-            data-aos="fade-in"
-          >
-            Ask for price
-          </button>
-        </article>
-        <article class="best__article">
-          <h2 class="best__article-heading" data-aos="fade-up">
-            <span>Best</span><span>Code</span>
-          </h2>
-          <p class="best__article-text" data-aos="fade-up">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-            perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
-            rem dolores hic harum repudiandae voluptatibus accusantium!
-          </p>
-          <button
-            class="best__article-cta cta"
-            href="#contact"
-            data-scroll
-            data-aos="fade-in"
-          >
-            Ask for price
-          </button>
-        </article>
-      </section>
+      <main>
+        <section class="section section--best" id="offer">
+          <article class="best__article">
+            <h2 class="best__article-heading" data-aos="fade-up">
+              <span>Best</span><span>Design</span>
+            </h2>
+            <p class="best__article-text" data-aos="fade-up">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+              perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
+              rem dolores hic harum repudiandae voluptatibus accusantium!
+            </p>
+            <button
+              class="best__article-cta cta"
+              href="#contact"
+              data-scroll
+              data-aos="fade-in"
+            >
+              Ask for price
+            </button>
+          </article>
+          <article class="best__article">
+            <h2 class="best__article-heading" data-aos="fade-up">
+              <span>Best</span><span>Code</span>
+            </h2>
+            <p class="best__article-text" data-aos="fade-up">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
+              perspiciatis inventore. Explicabo alias, cum a magni excepturi sed
+              rem dolores hic harum repudiandae voluptatibus accusantium!
+            </p>
+            <button
+              class="best__article-cta cta"
+              href="#contact"
+              data-scroll
+              data-aos="fade-in"
+            >
+              Ask for price
+            </button>
+          </article>
+        </section>
 
-      <section class="section">
-        <h2 class="section__heading">What we do?</h2>
-        <ul class="whatwedo__item-list">
-          <li class="whatwedo__item">
-            <img
-              src="assets/whatwedo/whatwedo1.png"
-              alt="pen and notes"
-              class="whatwedo__item-img"
-              data-aos="zoom-in"
-            />
-            <h3 class="whatwedo__item-title">Web design</h3>
-            <p class="whatwedo__item-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-              vero recusandae, dolor nostrum sapiente eveniet.
-            </p>
-          </li>
-          <li class="whatwedo__item">
-            <img
-              src="assets/whatwedo/whatwedo2.png"
-              alt="computer"
-              class="whatwedo__item-img"
-              data-aos="zoom-in"
-            />
-            <h3 class="whatwedo__item-title">Web Applications</h3>
-            <p class="whatwedo__item-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-              vero recusandae, dolor nostrum sapiente eveniet.
-            </p>
-          </li>
-          <li class="whatwedo__item">
-            <img
-              src="assets/whatwedo/whatwedo3.png"
-              alt="painting"
-              class="whatwedo__item-img"
-              data-aos="zoom-in"
-            />
-            <h3 class="whatwedo__item-title">Digital painting</h3>
-            <p class="whatwedo__item-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-              vero recusandae, dolor nostrum sapiente eveniet.
-            </p>
-          </li>
-          <li class="whatwedo__item">
-            <img
-              src="assets/whatwedo/whatwedo4.png"
-              alt="computer and mobile device"
-              class="whatwedo__item-img"
-              data-aos="zoom-in"
-            />
-            <h3 class="whatwedo__item-title">Desktop Applications</h3>
-            <p class="whatwedo__item-text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel illo
-              vero recusandae, dolor nostrum sapiente eveniet.
-            </p>
-          </li>
-        </ul>
-        <button class="cta">Ask for price</button>
-      </section>
-
-      <div class="glide" id="portfolio">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide">
-              <div class="glide__overlay">
-                <div class="glide__overlay-inner">
-                  <h3 class="glide__overlay-header">Neptune template</h3>
-                  <p class="glide__overlay-text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
-                    iste natus minus quidem nihil.
-                  </p>
-                  <button class="cta" href="#home" data-scroll>
-                    Watch more
-                  </button>
-                </div>
-              </div>
+        <section class="section">
+          <h2 class="section__heading">What we do?</h2>
+          <ul class="whatwedo__item-list">
+            <li class="whatwedo__item">
               <img
-                src="assets/glide/glide1.png"
-                alt="website"
-                class="glide__slide-image"
+                src="assets/whatwedo/whatwedo1.png"
+                alt="pen and notes"
+                class="whatwedo__item-img"
+                data-aos="zoom-in"
               />
+              <h3 class="whatwedo__item-title">Web design</h3>
+              <p class="whatwedo__item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                illo vero recusandae, dolor nostrum sapiente eveniet.
+              </p>
             </li>
-            <li class="glide__slide">
-              <div class="glide__overlay">
-                <div class="glide__overlay-inner">
-                  <h3 class="glide__overlay-header">Lorem template</h3>
-                  <p class="glide__overlay-text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
-                    iste natus minus quidem nihil.
-                  </p>
-                  <button class="cta" href="#home" data-scroll>
-                    Watch more
-                  </button>
-                </div>
-              </div>
+            <li class="whatwedo__item">
               <img
-                src="assets/glide/glide2.png"
-                alt="website"
-                class="glide__slide-image"
+                src="assets/whatwedo/whatwedo2.png"
+                alt="computer"
+                class="whatwedo__item-img"
+                data-aos="zoom-in"
               />
+              <h3 class="whatwedo__item-title">Web Applications</h3>
+              <p class="whatwedo__item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                illo vero recusandae, dolor nostrum sapiente eveniet.
+              </p>
             </li>
-            <li class="glide__slide">
-              <div class="glide__overlay">
-                <div class="glide__overlay-inner">
-                  <h3 class="glide__overlay-header">Ipsum template</h3>
-                  <p class="glide__overlay-text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Minima, corrupti? Nam quas fugit ipsam ea excepturi laborum
-                    iste natus minus quidem nihil.
-                  </p>
-                  <button class="cta" href="#home" data-scroll>
-                    Watch more
-                  </button>
-                </div>
-              </div>
+            <li class="whatwedo__item">
               <img
-                src="assets/glide/glide3.png"
-                alt="website"
-                class="glide__slide-image"
+                src="assets/whatwedo/whatwedo3.png"
+                alt="painting"
+                class="whatwedo__item-img"
+                data-aos="zoom-in"
               />
+              <h3 class="whatwedo__item-title">Digital painting</h3>
+              <p class="whatwedo__item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                illo vero recusandae, dolor nostrum sapiente eveniet.
+              </p>
+            </li>
+            <li class="whatwedo__item">
+              <img
+                src="assets/whatwedo/whatwedo4.png"
+                alt="computer and mobile device"
+                class="whatwedo__item-img"
+                data-aos="zoom-in"
+              />
+              <h3 class="whatwedo__item-title">Desktop Applications</h3>
+              <p class="whatwedo__item-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                illo vero recusandae, dolor nostrum sapiente eveniet.
+              </p>
             </li>
           </ul>
-        </div>
+          <button class="cta">Ask for price</button>
+        </section>
 
-        <div class="glide__arrows" data-glide-el="controls">
-          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-            &lt;
-          </button>
-          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
-            &gt;
-          </button>
-        </div>
-      </div>
+        <section class="glide" id="portfolio">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="glide__overlay">
+                  <div class="glide__overlay-inner">
+                    <h3 class="glide__overlay-header">Neptune template</h3>
+                    <p class="glide__overlay-text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Minima, corrupti? Nam quas fugit ipsam ea excepturi
+                      laborum iste natus minus quidem nihil.
+                    </p>
+                    <button class="cta" href="#home" data-scroll>
+                      Watch more
+                    </button>
+                  </div>
+                </div>
+                <img
+                  src="assets/glide/glide1.png"
+                  alt="website"
+                  class="glide__slide-image"
+                />
+              </li>
+              <li class="glide__slide">
+                <div class="glide__overlay">
+                  <div class="glide__overlay-inner">
+                    <h3 class="glide__overlay-header">Lorem template</h3>
+                    <p class="glide__overlay-text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Minima, corrupti? Nam quas fugit ipsam ea excepturi
+                      laborum iste natus minus quidem nihil.
+                    </p>
+                    <button class="cta" href="#home" data-scroll>
+                      Watch more
+                    </button>
+                  </div>
+                </div>
+                <img
+                  src="assets/glide/glide2.png"
+                  alt="website"
+                  class="glide__slide-image"
+                />
+              </li>
+              <li class="glide__slide">
+                <div class="glide__overlay">
+                  <div class="glide__overlay-inner">
+                    <h3 class="glide__overlay-header">Ipsum template</h3>
+                    <p class="glide__overlay-text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Minima, corrupti? Nam quas fugit ipsam ea excepturi
+                      laborum iste natus minus quidem nihil.
+                    </p>
+                    <button class="cta" href="#home" data-scroll>
+                      Watch more
+                    </button>
+                  </div>
+                </div>
+                <img
+                  src="assets/glide/glide3.png"
+                  alt="website"
+                  class="glide__slide-image"
+                />
+              </li>
+            </ul>
+          </div>
 
-      <div class="scrolltop" href="#home" data-scroll>
-        <img
-          class="scrolltop__arrow"
-          src="assets/arrowup.svg"
-          alt="scroll top"
-        />
-      </div>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+              &lt;
+            </button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+              &gt;
+            </button>
+          </div>
+        </section>
+
+        <section class="section section--about" id="about">
+          <h2 class="section__heading">About us!</h2>
+          <p class="about__text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus odio
+            temporibus quasi deserunt eligendi quaerat cumque numquam, assumenda
+            aliquam libero.
+          </p>
+          <ul class="about__people">
+            <li class="about__person" data-aos="fade-up">
+              <img
+                src="assets/about/face1.png"
+                alt="face"
+                class="about__person-face"
+              />
+              <h3 class="about__person-name">John Doe</h3>
+              <p class="about__person-details">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              </p>
+            </li>
+            <li class="about__person" data-aos="fade-up">
+              <img
+                src="assets/about/face2.png"
+                alt="face"
+                class="about__person-face"
+              />
+              <h3 class="about__person-name">John Doe</h3>
+              <p class="about__person-details">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </li>
+            <li class="about__person" data-aos="fade-up">
+              <img
+                src="assets/about/face3.png"
+                alt="face"
+                class="about__person-face"
+              />
+              <h3 class="about__person-name">John Doe</h3>
+              <p class="about__person-details">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </p>
+            </li>
+            <li class="about__person" data-aos="fade-up">
+              <img
+                src="assets/about/face4.png"
+                alt="face"
+                class="about__person-face"
+              />
+              <h3 class="about__person-name">John Doe</h3>
+              <p class="about__person-details">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              </p>
+            </li>
+          </ul>
+          <button class="cta">Watch more</button>
+        </section>
+
+        <div class="scrolltop" href="#home" data-scroll>
+          <img
+            class="scrolltop__arrow"
+            src="assets/arrowup.svg"
+            alt="scroll top"
+          />
+        </div>
+      </main>
+      <footer>footer</footer>
     </div>
+
     <script src="app.js"></script>
   </body>
 </html>
