--- a/src/index.html
+++ b/src/index.html
@@ -298,6 +298,18 @@
           <button class="cta">Watch more</button>
         </section>
 
+        <section class="map-container" id="contact">
+          <iframe
+            class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1547417.5013140407!2d-74.55238586810552!3d40.75543023803969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNowy%20Jork%2C%20Stany%20Zjednoczone!5e0!3m2!1spl!2spl!4v1602610953374!5m2!1spl!2spl"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </section>
+
         <div class="scrolltop" href="#home" data-scroll>
           <img
             class="scrolltop__arrow"
@@ -306,7 +318,15 @@
           />
         </div>
       </main>
-      <footer>footer</footer>
+      <footer class="footer">
+        <p>
+          <a
+            href="https://symu.co/freebies/templates-4/interactive-agency-psd-template/"
+            >Template
+          </a>
+          coded by <a href="https://nemmtor.github.io">Kacper Witas</a>
+        </p>
+      </footer>
     </div>
 
     <script src="app.js"></script>
