--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Interactive agency page, coded from psd to show my coding skills. Made by Kacper Witas."
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.png" />
@@ -305,6 +309,7 @@
             frameborder="0"
             style="border: 0"
             allowfullscreen=""
+            title="google maps"
             aria-hidden="false"
             tabindex="0"
           ></iframe>
