--- a/src/index.html
+++ b/src/index.html
@@ -182,9 +182,7 @@
                       Minima, corrupti? Nam quas fugit ipsam ea excepturi
                       laborum iste natus minus quidem nihil.
                     </p>
-                    <button class="cta" href="#home" data-scroll>
-                      Watch more
-                    </button>
+                    <button class="cta">Watch more</button>
                   </div>
                 </div>
                 <img
@@ -202,9 +200,7 @@
                       Minima, corrupti? Nam quas fugit ipsam ea excepturi
                       laborum iste natus minus quidem nihil.
                     </p>
-                    <button class="cta" href="#home" data-scroll>
-                      Watch more
-                    </button>
+                    <button class="cta">Watch more</button>
                   </div>
                 </div>
                 <img
@@ -222,9 +218,7 @@
                       Minima, corrupti? Nam quas fugit ipsam ea excepturi
                       laborum iste natus minus quidem nihil.
                     </p>
-                    <button class="cta" href="#home" data-scroll>
-                      Watch more
-                    </button>
+                    <button class="cta">Watch more</button>
                   </div>
                 </div>
                 <img
