--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
             <li class="whatwedo__item">
               <img
                 src="assets/whatwedo/whatwedo3.png"
-                alt="painting"
+                alt="a nice painting"
                 class="whatwedo__item-img"
                 data-aos="zoom-in"
               />
@@ -265,7 +265,7 @@
                 </div>
                 <img
                   src="assets/glide/glide1.png"
-                  alt="website"
+                  alt="Neptune website"
                   class="glide__slide-image"
                 />
               </li>
@@ -283,7 +283,7 @@
                 </div>
                 <img
                   src="assets/glide/glide2.png"
-                  alt="website"
+                  alt="Lorem website"
                   class="glide__slide-image"
                 />
               </li>
@@ -301,7 +301,7 @@
                 </div>
                 <img
                   src="assets/glide/glide3.png"
-                  alt="website"
+                  alt="Ipsum website"
                   class="glide__slide-image"
                 />
               </li>
